--- a/public/admin/login.html
+++ b/public/admin/login.html
@@ -16,14 +16,54 @@
       </div>
       <div class="form-group">
         <label for="email" class="sr-only">邮箱</label>
-        <input id="email" type="email" class="form-control" placeholder="邮箱" autofocus>
+        <input id="email" name="email" type="email" class="form-control" placeholder="邮箱" autofocus>
       </div>
       <div class="form-group">
         <label for="password" class="sr-only">密码</label>
-        <input id="password" type="password" class="form-control" placeholder="密码">
+        <input id="password" name="password" type="password" class="form-control" placeholder="密码">
       </div>
-      <button class="btn btn-primary btn-block">登 录</button>
+      <button class="btn btn-primary btn-block" id="loginBtn">登 录</button>
     </div>
   </div>
+  <script src="../assets/vendors/jquery/jquery.min.js"></script>
+  <script>
+    // 选择登录按钮并为其添加点击事件
+    $('#loginBtn').on('click', function () {
+      // 获取用户输入的邮箱地址
+      var email = $('#email').val();
+      // 获取用户输入的密码
+      var password = $('#password').val();
+      // 判断用户是否输入了邮箱地址
+      if (email.trim().length == 0) {
+        alert('请输入邮箱')
+        return;
+      }
+      // 判断用户是否输入了密码
+      if (password.trim().length == 0) {
+        alert('请输入密码');
+        return;
+      }
+
+      $.ajax({
+        type: 'post',
+        url: '/login',
+        data: {
+          email: email,
+          password: password
+        },
+        success: function (response) {
+          // 登录成功 跳转到数据管理的首页面
+          location.href = 'index.html';
+        },
+        error: function () {
+          // 登录失败
+          alert('用户名或者密码错误')
+        }
+      })
+
+    });
+   
+  
+  </script>
 </body>
 </html>
