--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -1,9 +1,9 @@
-<!-- <script src="/login/status"></script>
+<script src="/login/status"></script>
 <script>
   if(!isLogin){
     location.href='login.html'
   }
-</script> -->
+</script>
 
 <!DOCTYPE html>
 <html lang="zh-CN">
@@ -91,7 +91,7 @@
 
   <script src="../assets/vendors/jquery/jquery.js"></script>
   <script src="../assets/vendors/bootstrap/js/bootstrap.js"></script>
-  <script>NProgress.done()</script>
+
 
   <script>
   $('#logout').on('click',function(){
@@ -110,5 +110,8 @@
     }
   })
   </script>
+
+
+<script>NProgress.done()</script>
 </body>
 </html>
