--- a/public/admin/users.html
+++ b/public/admin/users.html
@@ -37,7 +37,7 @@
               <div class="form-group">
                 <label class="form-image">
                   <input id="avatar" type="file" >
-                  <img src="../assets/img/default.png">
+                  <img src="../assets/img/default.png" id="preview">
                   <i class="mask fa fa-upload"></i>
                 </label>
               </div>
@@ -73,6 +73,7 @@
             </div>
             <div class="form-group">
               <button class="btn btn-primary" type="button" id="btn">添加</button>
+              <button class="btn btn-primary" type="button" id="btnEdit" style="display: none">修改</button>
             </div>
           </form>
         </div>
